<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.arlib.floatingsearchview.FloatingSearchView
        android:id="@+id/map_floating_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="12dp"
        app:floatingSearch_close_search_on_keyboard_dismiss="true"
        app:floatingSearch_leftActionMode="noLeftAction"
        app:floatingSearch_menu="@menu/map_search_menu"
        app:floatingSearch_searchBarMarginLeft="8dp"
        app:floatingSearch_searchBarMarginRight="8dp"
        app:floatingSearch_searchBarMarginTop="8dp"
        app:floatingSearch_searchHint="Search Stores"
        app:floatingSearch_showSearchKey="false"
        app:floatingSearch_suggestionsListAnimDuration="250" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <FrameLayout
        android:id="@+id/popup_menu"
        android:layout_width="260dp"
        android:layout_height="360dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/gradient_blue"
        android:elevation="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="14dp"
            android:text="Shop Options"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/close_popup"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end|top"
            android:layout_margin="14dp"
            android:background="@drawable/button_category"
            app:srcCompat="@drawable/ic_close" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="38dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/shopsButton"
                android:layout_width="155dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:background="@drawable/button_main_style"
                android:elevation="8dp"
                android:text="Show All Shops"
                android:textColor="@color/colorPrimaryWhite" />

            <Button
                android:id="@+id/nearbyButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="155dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_main_style"
                android:elevation="8dp"
                android:text="Nearby Shops"
                android:textColor="@color/colorPrimaryWhite" />

            <CheckBox
                android:id="@+id/cbWeather"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:buttonTint="@color/colorPrice"
                android:checked="false"
                android:text="Weather based offers"
                android:textColor="@color/colorPrimaryWhite" />

            <TextView
                android:id="@+id/radius_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Shop radius"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/radius_seekBar"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                android:max="500"
                android:progress="50"
                android:progressTint="@color/colorPrice"
                android:thumbTint="@color/colorPrimaryWhite" />

        </LinearLayout>

    </FrameLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryWhite"
        android:scrollbarSize="1dp">

        <LinearLayout
            android:id="@+id/nearby_stores_linear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>