...
        android:id="@+id/menu_discounts"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="Discounts"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="Map"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_user_options"
...
